examples/panic/panic.out
# To run this sample, navigate to the directory that contains the
# `.bal` file and execute the `jballerina run` command.
$ jballerina run panic.bal
Record ID: 1, value: record1
error: Record is nil {}
	at readRecord(panic.bal:13)
	   main(panic.bal:26)
